# boards

./: .env.example  .gitignore  AGENTS-light.md  AGENTS.md  AI에이전트_주도개발_방법론_강의안.pptx  README.md  docker-compose.yml  plan.md
backend/: Dockerfile  openapi.json  pyproject.toml
backend/app/: config.py  db.py  deps.py  errors.py  export_openapi.py  main.py  models.py  schemas.py  security.py  seed.py  storage.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 0001_initial_schema.py
backend/app/api/: attachments.py  auth.py  boards.py  posts.py
backend/app/repository/: attachment_repository.py  board_repository.py  comment_repository.py  post_repository.py  user_repository.py
backend/app/service/: attachment_service.py  auth_service.py  board_service.py  comment_service.py  file_validation.py  image_service.py  pagination.py  permissions.py  post_service.py
backend/tests/: conftest.py  test_attachments.py  test_auth.py  test_boards.py  test_cors.py  test_health.py  test_image_board.py  test_pagination.py  test_posts.py  test_security.py  test_seed.py
docs/adr/: 0001-tech-stack.md  0002-board-type-permission-model.md  0003-file-storage-and-thumbnails.md  0004-auth-jwt-rbac.md  0005-db-s3-consistency.md  0006-delete-semantics.md
docs/architecture/: data.md  db-schema.md  deployment.md  security.md  system.md
docs/retrospectives/: phase-0-and-1-scaffolding-auth.md  phase-2-board-crud-permissions.md  phase-3-posts-comments.md  (+3 more)
frontend/: Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
(+32 files in other folders)
